service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
    - name: server
      port: 80
      targetPort: 80
    - name: postgres
      port: 5432
      targetPort: 5432
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
